fix: layout and login

--- a/apps/ez2erp/.env.local.example
+++ b/apps/ez2erp/.env.local.example
@@ -1,5 +1,7 @@
 NEXT_PUBLIC_GOOGLE_MAP_API_KEY=""
-NEXTAUTH_SECRET=""
-NEXTAUTH_URL=""
+NEXTAUTH_SECRET="9c9c5a2dfb49976403cb48caa82dfeae"
+NEXTAUTH_URL="http://localhost:3000"
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+NEXT_PUBLIC_LAMBDA_HOST="http://localhost:8000"
+NEXT_PUBLIC_API_KEY="V3VD1kGXxh8wY7zL1y0FQ88WqHoVBgDMazeDSvo9"
